--- a/group_vars/control_node.yml
+++ b/group_vars/control_node.yml
@@ -4,8 +4,8 @@ openstack_cloud: "{{GUID}}-project"
 
 openstack_servers:
 
-  - instance_name: app1
-    AnsibleGroup: apps
+  - instance_name: osp_app1
+    AnsibleGroup: osp_apps
     deployment: prod
     security_group_name: "{{GUID}}-HostSG"
     image: "{{ _server_image | default('rhel-8.3') }}"
@@ -13,8 +13,8 @@ openstack_servers:
     flavor: GLOBAL-CPU_4_Memory_32768_Disk_60_flavor
     key_name: "{{GUID}}-keypair"
     network: "{{GUID}}-prod-network"
-  - instance_name: app2
-    AnsibleGroup: apps
+  - instance_name: osp_app2
+    AnsibleGroup: osp_apps
     deployment: prod
     security_group_name: "{{GUID}}-HostSG"
     image: "{{ _server_image | default('rhel-8.3') }}"
@@ -22,8 +22,8 @@ openstack_servers:
     flavor: GLOBAL-CPU_4_Memory_32768_Disk_60_flavor
     key_name: "{{GUID}}-keypair"
     network: "{{GUID}}-prod-network"
-  - instance_name: appdb
-    AnsibleGroup: appdbs
+  - instance_name: osp_appdb
+    AnsibleGroup: osp_appdbs
     deployment: prod
     security_group_name: "{{GUID}}-HostSG"
     image: "{{ _server_image | default('rhel-8.3') }}"
@@ -31,8 +31,8 @@ openstack_servers:
     flavor: GLOBAL-CPU_4_Memory_32768_Disk_60_flavor
     key_name: "{{GUID}}-keypair"
     network: "{{GUID}}-prod-network"
-  - instance_name: frontend
-    AnsibleGroup: frontends
+  - instance_name: osp_frontend
+    AnsibleGroup: osp_frontends
     deployment: prod
     security_group_name: "{{GUID}}-HostSG"
     image: "{{ _server_image | default('rhel-8.3') }}"
