--- a/group_vars/control_node.yml
+++ b/group_vars/control_node.yml
@@ -5,7 +5,7 @@ openstack_cloud: "{{GUID}}-project"
 openstack_servers:
 
   - instance_name: web1
-    AnsibleGroup: backends
+    AnsibleGroup: backend_servers
     deployment: prod
     security_group_name: "{{GUID}}-HostSG"
     image: "{{ _server_image | default('rhel-8.3') }}"
