--- a/group_vars/control_node.yml
+++ b/group_vars/control_node.yml
@@ -3,40 +3,39 @@ openstack_server_state: present
 openstack_cloud: "{{GUID}}-project"
 
 openstack_servers:
-
-  - instance_name: web1
-    AnsibleGroup: backend_servers
-    deployment: prod
-    security_group_name: "{{GUID}}-HostSG"
-    image: "{{ _server_image | default('rhel-8.3') }}"
-    openstack_cloud: "{{GUID}}-project"
-    flavor: GLOBAL-CPU_4_Memory_32768_Disk_60_flavor
-    key_name: "{{GUID}}-keypair"
-    network: "{{GUID}}-prod-network"
-  - instance_name: web2
-    AnsibleGroup: backend_servers
-    deployment: prod
-    security_group_name: "{{GUID}}-HostSG"
-    image: "{{ _server_image | default('rhel-8.3') }}"
-    openstack_cloud: "{{GUID}}-project"
-    flavor: GLOBAL-CPU_4_Memory_32768_Disk_60_flavor
-    key_name: "{{GUID}}-keypair"
-    network: "{{GUID}}-prod-network"
-  - instance_name: db
-    AnsibleGroup: database_servers
-    deployment: prod
-    security_group_name: "{{GUID}}-HostSG"
-    image: "{{ _server_image | default('rhel-8.3') }}"
-    openstack_cloud: "{{GUID}}-project"
-    flavor: GLOBAL-CPU_4_Memory_32768_Disk_60_flavor
-    key_name: "{{GUID}}-keypair"
-    network: "{{GUID}}-prod-network"
-  - instance_name: lb
+  - instance_name: frontend1
     AnsibleGroup: load_balancers
     deployment: prod
     security_group_name: "{{GUID}}-HostSG"
-    image: "{{ _server_image | default('rhel-8.3') }}"
+    image: "rhel-8.3"
     openstack_cloud: "{{GUID}}-project"
-    flavor: GLOBAL-CPU_4_Memory_32768_Disk_60_flavor
+    flavor: GLOBAL-CPU_4_Memory_8192_Disk_30_flavor
     key_name: "{{GUID}}-keypair"
-    network: "{{GUID}}-prod-network"
+    network: "{{GUID}}-dev-network"
+  - instance_name: app1
+    AnsibleGroup: app_servers
+    deployment: prod
+    security_group_name: "{{GUID}}-HostSG"
+    image: "rhel-8.3"
+    openstack_cloud: "{{GUID}}-project"
+    flavor: GLOBAL-CPU_4_Memory_8192_Disk_30_flavor
+    key_name: "{{GUID}}-keypair"
+    network: "{{GUID}}-dev-network"
+  - instance_name: app2
+    AnsibleGroup: app_servers
+    deployment: prod
+    security_group_name: "{{GUID}}-HostSG"
+    image: "rhel-8.3"
+    openstack_cloud: "{{GUID}}-project"
+    flavor: GLOBAL-CPU_4_Memory_8192_Disk_30_flavor
+    key_name: "{{GUID}}-keypair"
+    network: "{{GUID}}-dev-network"
+  - instance_name: appdb1
+    AnsibleGroup: database_servers
+    deployment: prod
+    security_group_name: "{{GUID}}-HostSG"
+    image: "rhel-8.3"
+    openstack_cloud: "{{GUID}}-project"
+    flavor: GLOBAL-CPU_4_Memory_8192_Disk_30_flavor
+    key_name: "{{GUID}}-keypair"
+    network: "{{GUID}}-dev-network"
